@startuml

class Address <<partial>> {
    + Address()
    + AddressId : int <<get>> <<set>>
    + AddressLine1 : string <<get>> <<set>>
    + AddressLine2 : string <<get>> <<set>>
    + City : string <<get>> <<set>>
    + StateProvince : string <<get>> <<set>>
    + CountryRegion : string <<get>> <<set>>
    + PostalCode : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
Address --> "Rowguid" Guid
Address --> "ModifiedDate" DateTime
Address --> "CustomerAddresses<CustomerAddress>" "ICollection`1"
Address --> "SalesOrderHeaderBillToAddresses<SalesOrderHeader>" "ICollection`1"
Address --> "SalesOrderHeaderShipToAddresses<SalesOrderHeader>" "ICollection`1"


' ''''''''''

class BuildVersion <<partial>> {
    + SystemInformationId : byte <<get>> <<set>>
    + DatabaseVersion : string <<get>> <<set>>
}
BuildVersion --> "VersionDate" DateTime
BuildVersion --> "ModifiedDate" DateTime


' ''''''''''

class Customer <<partial>> {
    + Customer()
    + CustomerId : int <<get>> <<set>>
    + NameStyle : bool <<get>> <<set>>
    + Title : string <<get>> <<set>>
    + FirstName : string <<get>> <<set>>
    + MiddleName : string <<get>> <<set>>
    + LastName : string <<get>> <<set>>
    + Suffix : string <<get>> <<set>>
    + CompanyName : string <<get>> <<set>>
    + SalesPerson : string <<get>> <<set>>
    + EmailAddress : string <<get>> <<set>>
    + Phone : string <<get>> <<set>>
    + PasswordHash : string <<get>> <<set>>
    + PasswordSalt : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
Customer --> "Rowguid" Guid
Customer --> "ModifiedDate" DateTime
Customer --> "CustomerAddresses<CustomerAddress>" "ICollection`1"
Customer --> "SalesOrderHeaders<SalesOrderHeader>" "ICollection`1"


' ''''''''''

class CustomerAddress <<partial>> {
    + CustomerId : int <<get>> <<set>>
    + AddressId : int <<get>> <<set>>
    + AddressType : string <<get>> <<set>>
}
CustomerAddress --> "Rowguid" Guid
CustomerAddress --> "ModifiedDate" DateTime
CustomerAddress --> "Address" Address
CustomerAddress --> "Customer" Customer


' ''''''''''

class ErrorLog <<partial>> {
    + ErrorLogId : int <<get>> <<set>>
    + UserName : string <<get>> <<set>>
    + ErrorNumber : int <<get>> <<set>>
    + ErrorSeverity : int? <<get>> <<set>>
    + ErrorState : int? <<get>> <<set>>
    + ErrorProcedure : string <<get>> <<set>>
    + ErrorLine : int? <<get>> <<set>>
    + ErrorMessage : string <<get>> <<set>>
}
ErrorLog --> "ErrorTime" DateTime


' ''''''''''

class Product <<partial>> {
    + Product()
    + Product(name:string, productNumber:string, standardCost:decimal, listPrice:decimal, sellStartDate:DateTime, rowguid:Guid, modifiedDate:DateTime)
    + ProductId : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + ProductNumber : string <<get>> <<set>>
    + Color : string <<get>> <<set>>
    + StandardCost : decimal <<get>> <<set>>
    + ListPrice : decimal <<get>> <<set>>
    + Size : string <<get>> <<set>>
    + Weight : decimal? <<get>> <<set>>
    + ProductCategoryId : int? <<get>> <<set>>
    + ProductModelId : int? <<get>> <<set>>
    + SellEndDate : DateTime? <<get>> <<set>>
    + DiscontinuedDate : DateTime? <<get>> <<set>>
    + ThumbnailPhotoFileName : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
Product --> "SellStartDate" DateTime
Product --> "Rowguid" Guid
Product --> "ModifiedDate" DateTime
Product --> "ProductCategory" ProductCategory
Product --> "ProductModel" ProductModel
Product --> "SalesOrderDetails<SalesOrderDetail>" "ICollection`1"


' ''''''''''

class ProductCategory <<partial>> {
    + ProductCategory()
    + ProductCategoryId : int <<get>> <<set>>
    + ParentProductCategoryId : int? <<get>> <<set>>
    + Name : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
ProductCategory --> "Rowguid" Guid
ProductCategory --> "ModifiedDate" DateTime
ProductCategory --> "ParentProductCategory" ProductCategory
ProductCategory --> "InverseParentProductCategory<ProductCategory>" "ICollection`1"
ProductCategory --> "Products<Product>" "ICollection`1"


' ''''''''''

class ProductDescription <<partial>> {
    + ProductDescription()
    + ProductDescriptionId : int <<get>> <<set>>
    + Description : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
ProductDescription --> "Rowguid" Guid
ProductDescription --> "ModifiedDate" DateTime
ProductDescription --> "ProductModelProductDescriptions<ProductModelProductDescription>" "ICollection`1"


' ''''''''''

class ProductModel <<partial>> {
    + ProductModel()
    + ProductModelId : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + CatalogDescription : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
ProductModel --> "Rowguid" Guid
ProductModel --> "ModifiedDate" DateTime
ProductModel --> "ProductModelProductDescriptions<ProductModelProductDescription>" "ICollection`1"
ProductModel --> "Products<Product>" "ICollection`1"


' ''''''''''

class ProductModelProductDescription <<partial>> {
    + ProductModelId : int <<get>> <<set>>
    + ProductDescriptionId : int <<get>> <<set>>
    + Culture : string <<get>> <<set>>
}
ProductModelProductDescription --> "Rowguid" Guid
ProductModelProductDescription --> "ModifiedDate" DateTime
ProductModelProductDescription --> "ProductDescription" ProductDescription
ProductModelProductDescription --> "ProductModel" ProductModel


' ''''''''''

class SalesOrderDetail <<partial>> {
    + SalesOrderId : int <<get>> <<set>>
    + SalesOrderDetailId : int <<get>> <<set>>
    + OrderQty : short <<get>> <<set>>
    + ProductId : int <<get>> <<set>>
    + UnitPrice : decimal <<get>> <<set>>
    + UnitPriceDiscount : decimal <<get>> <<set>>
    + LineTotal : decimal <<get>> <<set>>
}
SalesOrderDetail --> "Rowguid" Guid
SalesOrderDetail --> "ModifiedDate" DateTime
SalesOrderDetail --> "Product" Product
SalesOrderDetail --> "SalesOrder" SalesOrderHeader


' ''''''''''

class SalesOrderHeader <<partial>> {
    + SalesOrderHeader()
    + SalesOrderId : int <<get>> <<set>>
    + RevisionNumber : byte <<get>> <<set>>
    + ShipDate : DateTime? <<get>> <<set>>
    + Status : byte <<get>> <<set>>
    + OnlineOrderFlag : bool? <<get>> <<set>>
    + SalesOrderNumber : string <<get>> <<set>>
    + PurchaseOrderNumber : string <<get>> <<set>>
    + AccountNumber : string <<get>> <<set>>
    + CustomerId : int <<get>> <<set>>
    + ShipToAddressId : int? <<get>> <<set>>
    + BillToAddressId : int? <<get>> <<set>>
    + ShipMethod : string <<get>> <<set>>
    + CreditCardApprovalCode : string <<get>> <<set>>
    + SubTotal : decimal <<get>> <<set>>
    + TaxAmt : decimal <<get>> <<set>>
    + Freight : decimal <<get>> <<set>>
    + TotalDue : decimal <<get>> <<set>>
    + Comment : string <<get>> <<set>>
}
class "ICollection`1"<T> {
}
SalesOrderHeader --> "OrderDate" DateTime
SalesOrderHeader --> "DueDate" DateTime
SalesOrderHeader --> "Rowguid" Guid
SalesOrderHeader --> "ModifiedDate" DateTime
SalesOrderHeader --> "BillToAddress" Address
SalesOrderHeader --> "Customer" Customer
SalesOrderHeader --> "ShipToAddress" Address
SalesOrderHeader --> "SalesOrderDetails<SalesOrderDetail>" "ICollection`1"


' ''''''''''

class VGetAllCategory <<partial>> {
    + ParentProductCategoryName : string <<get>> <<set>>
    + ProductCategoryName : string <<get>> <<set>>
    + ProductCategoryId : int? <<get>> <<set>>
}


' ''''''''''

class VProductAndDescription <<partial>> {
    + ProductId : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + ProductModel : string <<get>> <<set>>
    + Culture : string <<get>> <<set>>
    + Description : string <<get>> <<set>>
}


' ''''''''''

class VProductModelCatalogDescription <<partial>> {
    + ProductModelId : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + Summary : string <<get>> <<set>>
    + Manufacturer : string <<get>> <<set>>
    + Copyright : string <<get>> <<set>>
    + ProductUrl : string <<get>> <<set>>
    + WarrantyPeriod : string <<get>> <<set>>
    + WarrantyDescription : string <<get>> <<set>>
    + NoOfYears : string <<get>> <<set>>
    + MaintenanceDescription : string <<get>> <<set>>
    + Wheel : string <<get>> <<set>>
    + Saddle : string <<get>> <<set>>
    + Pedal : string <<get>> <<set>>
    + BikeFrame : string <<get>> <<set>>
    + Crankset : string <<get>> <<set>>
    + PictureAngle : string <<get>> <<set>>
    + PictureSize : string <<get>> <<set>>
    + ProductPhotoId : string <<get>> <<set>>
    + Material : string <<get>> <<set>>
    + Color : string <<get>> <<set>>
    + ProductLine : string <<get>> <<set>>
    + Style : string <<get>> <<set>>
    + RiderExperience : string <<get>> <<set>>
}
VProductModelCatalogDescription --> "Rowguid" Guid
VProductModelCatalogDescription --> "ModifiedDate" DateTime

@enduml
